--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "spatie/laravel-markdown": "^2.3"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.9",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.10",
         "laravel/sail": "^1.18",
