--- a/composer.json
+++ b/composer.json
@@ -71,6 +71,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "fix": [
+            "./vendor/bin/pint"
         ]
     },
     "extra": {
